--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Cocos Creator | kinder</title>
+  <title>Cocos Creator | wechatplaydu</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
@@ -39,7 +39,9 @@
 <body>
   <video id="video" style="position: absolute; left: 0px;"></video>
   <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
-  <img  style="position: absolute; height: 300px; width: 300px; vertical-align: middle;" src="code.png"/>
+  <div id="linkcode" style="position:absolute; left:0; width: 100%; height: 100%; visibility: hidden;">
+    <img style="width: 200px;height: 200px;display: block;margin: 600px auto 0;" src="Link.jpg" />
+  </div>
   
 <!-- Polyfills bundle. -->
 <script src="src/polyfills.bundle.js" charset="utf-8"> </script>
