--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <video id="video" style="position: absolute; left: 0px;"></video>
   <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
   <div id="linkcode" style="position:absolute; left:0; width: 100%; height: 100%; visibility: hidden;">
-    <img style="width: 200px;height: 200px;display: block;margin: 600px auto 0;" src="Link.jpg" />
+    <img style="width: 200px;height: 200px;display: block;margin: 60% auto 0;" src="Link.jpg" />
   </div>
   
 <!-- Polyfills bundle. -->
