--- a/index.html
+++ b/index.html
@@ -35,13 +35,25 @@
 
   <link rel="stylesheet" type="text/css" href="style.css"/>
 
+
+
 </head>
 <body>
   <video id="video" style="position: absolute; left: 0px;"></video>
   <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
-  <div id="linkcode" style="position:absolute; left:0; width: 100%; height: 100%; visibility: hidden;">
-    <img style="width: 40%; height: auto; display: block; margin: 110% auto 0;" src="Link.jpg" />
-  </div>
+
+  <script src="uuidv4.js"></script>
+  <script>
+      console.log(localStorage.getItem("uuid"));
+
+      if (localStorage.getItem("uuid") == null)
+      {
+        var uuid = uuidv4();
+        console.log("uuid: " + uuid);
+        localStorage.setItem("uuid", uuid);
+      } 
+  </script>
+
   
 <!-- Polyfills bundle. -->
 <script src="src/polyfills.bundle.js" charset="utf-8"> </script>
