--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
 <img id="image" src="omg.png" />
 <script src="index.ts"></script>
 <div id="text">Test touch</div>
+<script>
+    let img = document.getElementById("image");
+    if (img != null) {
+        img.addEventListener('contextmenu', (event) => {
+            let text = document.getElementById("text");
+            if (text != null) {
+                text.innerHTML = "Touched";
+            }
+        })
+    }
+</script>
