--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             interval = setInterval(function () {
                 longTouch++;
                 if (text != null) {
-                    text.innerHTML = "Touch start: " + longTouch;
+                    text.innerHTML = "Touching: " + longTouch;
                 }
             }, 500);
         })
