--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             longTouch = 0;
         }, true)
         if (text != null) {
-            if (touchDuration == 3) {
+            if (touchDuration >= 3) {
                 text.innerHTML = "Long touch";
             }
         }
