--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<img id="image" src="omg.png" />
 <!-- <script src="index.ts"></script> -->
-<div id="text">Test touch</div>
-<script>
+<a href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzA4OTA2NDc2Mg==#wechat_redirect"> Click here</a>
+<!-- <script>
     let longTouch = 0;
     let touchDuration = 0;
     let interval;
@@ -49,4 +48,4 @@
             }
         }
     }
-</script>
+</script> -->
