--- a/index.html
+++ b/index.html
@@ -1,51 +1,60 @@
-<!-- <script src="index.ts"></script> -->
-<a href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzA4OTA2NDc2Mg==#wechat_redirect"> Click here</a>
-<!-- <script>
-    let longTouch = 0;
-    let touchDuration = 0;
-    let interval;
-    let img = document.getElementById("image");
-    let text = document.getElementById("text");
-    if (img != null) {
-        // img.addEventListener('touchstart', (event) => {
-        //     touchDuration = 0;
-        //     interval = setInterval(function () {
-        //         longTouch++;
-        //         if (text != null) {
-        //             text.innerHTML = "Touching: " + longTouch;
-        //         }
-        //     }, 500);
-        // }, true)
-        // img.addEventListener('touchend', (event) => {
-        //     touchDuration = longTouch;
-        //     clearInterval(interval);
-        //     longTouch = 0;
-        //     if (text != null) {
-        //         if (touchDuration >= 3) {
-        //             text.innerHTML = "Long touch";
-        //         }
-        //     }
-        // }, true)
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
 
-        img.ontouchstart = () => {
-            touchDuration = 0;
-            interval = setInterval(function () {
-                longTouch++;
-                if (text != null) {
-                    text.innerHTML = "Touching: " + longTouch;
-                }
-            }, 500);
-        }
+  <title>Cocos Creator | Codeplaydu</title>
 
-        img.ontouchcancel = () => {
-            touchDuration = longTouch;
-            clearInterval(interval);
-            longTouch = 0;
-            if (text != null) {
-                if (touchDuration >= 3) {
-                    text.innerHTML = "Long touch";
-                }
-            }
-        }
-    }
-</script> -->
+  <!--http://www.html5rocks.com/en/mobile/mobifying/-->
+  <meta name="viewport"
+        content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true"/>
+
+  <!--https://developer.apple.com/library/safari/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/MetaTags.html-->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- force webkit on 360 -->
+  <meta name="renderer" content="webkit"/>
+  <meta name="force-rendering" content="webkit"/>
+  <!-- force edge on IE -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+  <meta name="msapplication-tap-highlight" content="no">
+
+  <!-- force full screen on some browser -->
+  <meta name="full-screen" content="yes"/>
+  <meta name="x5-fullscreen" content="true"/>
+  <meta name="360-fullscreen" content="true"/>
+
+  <!--fix fireball/issues/3568 -->
+  <!--<meta name="browsermode" content="application">-->
+  <meta name="x5-page-mode" content="app">
+
+  <!--<link rel="apple-touch-icon" href=".png" />-->
+  <!--<link rel="apple-touch-icon-precomposed" href=".png" />-->
+
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+
+</head>
+<body>
+  <div id="GameDiv" cc_exact_fit_screen="true">
+      <div id="Cocos3dGameContainer">
+        <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="99"></canvas>
+      </div>
+    </div>
+  
+<!-- Polyfills bundle. -->
+<script src="src/polyfills.bundle.js" charset="utf-8"> </script>
+
+<!-- SystemJS support. -->
+<script src="src/system.bundle.js" charset="utf-8"> </script>
+
+<!-- Import map -->
+<script src="src/import-map.json" type="systemjs-importmap" charset="utf-8"> </script>
+
+<script>
+    System.import('./index.js').catch(function(err) { console.error(err); })
+</script>
+
+</body>
+</html>
