--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!-- <script src="index.ts"></script> -->
-<a href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzA4OTA2NDc2Mg==#wechat_redirect"> Click here</a>
+<a href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzA4OTA2NDc2Mg==#wechat_redirect">
+    <img src="omg.png">
+</a>
 <!-- <script>
     let longTouch = 0;
     let touchDuration = 0;
