--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- <script src="index.ts"></script> -->
 <a href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzA4OTA2NDc2Mg==#wechat_redirect">
-    <img src="omg.png">
+    <img src="omg.png" style="width:42px;height:42px;">
 </a>
 <!-- <script>
     let longTouch = 0;
